# par

./: CMakeLists.txt  README.md
include/par/: executor.h  for_each.h  range.h  sequential_executor.h  transform_reduce.h
include/par/omp/: executors.h
include/par/tbb/: executors.h
